--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "postsetup": "npm run build:dll",
     "clean": "shjs ./internals/scripts/clean.js",
     "clean:all": "npm run analyze:clean && npm run test:clean && npm run build:clean",
-    "generate": "plop --plopfile internals/generators/index.js",
     "lint": "npm run lint:js && npm run lint:css",
     "lint:css": "stylelint './app/**/*.js'",
     "lint:eslint": "eslint --ignore-path .gitignore --ignore-pattern internals/scripts",
@@ -99,8 +98,7 @@
       "cross-env",
       "express",
       "ip",
-      "minimist",
-      "sanitize.css"
+      "minimist"
     ],
     "include": [
       "core-js",
@@ -171,7 +169,6 @@
     "redux-immutable": "4.0.0",
     "redux-saga": "0.16.0",
     "reselect": "3.0.1",
-    "sanitize.css": "4.1.0",
     "styled-components": "3.3.2",
     "warning": "4.0.1",
     "whatwg-fetch": "2.0.4"
@@ -222,10 +219,8 @@
     "jest-styled-components": "5.0.1",
     "lint-staged": "7.2.0",
     "ngrok": "3.0.1",
-    "node-plop": "0.15.0",
     "null-loader": "0.1.1",
     "offline-plugin": "5.0.5",
-    "plop": "2.0.0",
     "pre-commit": "1.2.2",
     "prettier": "1.13.5",
     "react-test-renderer": "16.4.1",
